test/Common/LinkerScriptParsing/Errors/Assignments/MissingWhitespace/Inputs/script4.t
ADDITIONAL_INPUT5 +=0x600df00d;
